--- a/css/main.css
+++ b/css/main.css
@@ -12,35 +12,28 @@ body {
   text-align: center;
 }
 
+.btn-group > .btn {
+  padding-right: 12px;
+  padding-left: 12px;
+}
 
-/* Header */
-
-.docs-header {
+.btn-group > label {
   margin-bottom: 0;
-}
-
-.navbar-toggle:hover,
-.navbar-toggle:focus {
-  border-color: #0074d9;
-}
-
-.navbar-toggle .icon-bar {
-  background-color: #0074d9;
 }
 
 
 /* Jumbotron */
 
 .docs-jumbotron {
-  background-color: #0074d9;
   color: #fff;
+  background-color: #0074d9;
+  border-radius: 0;
 }
 
 .docs-jumbotron .version {
-  font-size: 14px;
+  font-size: 16px;
   color: #fff;
-  filter: alpha(opacity=50);
-  opacity: 0.5;
+  opacity: 0.8;
 }
 
 @media (min-width: 992px) {
@@ -51,12 +44,13 @@ body {
 }
 
 .docs-carbonads-container {
+  font-size: 14px;
   position: relative;
 }
 
 .docs-carbonads {
   max-width: 350px;
-  padding: 15px;
+  padding: 16px;
   border: 1px solid #ccc;
   border-radius: 4px;
   overflow: hidden;
@@ -96,12 +90,152 @@ body {
   .docs-carbonads {
     position: absolute;
     right: 0;
-    bottom: 5px;
+    bottom: 0;
   }
 }
 
 
 /* Content */
+
+.img-container,
+.img-preview {
+  background-color: #f7f7f7;
+  width: 100%;
+  text-align: center;
+}
+
+.img-container {
+  min-height: 200px;
+  max-height: 485px;
+  margin-bottom: 20px;
+}
+
+@media (min-width: 768px) {
+  .img-container {
+    min-height: 485px;
+  }
+}
+
+.img-container > img {
+  max-width: 100%;
+}
+
+.docs-preview {
+  margin-right: -15px;
+}
+
+.img-preview {
+  float: left;
+  margin-right: 10px;
+  margin-bottom: 10px;
+  overflow: hidden;
+}
+
+.img-preview > img {
+  max-width: 100%;
+}
+
+.preview-lg {
+  width: 256px;
+  height: 144px;
+}
+
+.preview-md {
+  width: 128px;
+  height: 72px;
+}
+
+.preview-sm {
+  width: 64px;
+  height: 36px;
+}
+
+.preview-xs {
+  width: 32px;
+  height: 18px;
+  margin-right: 0;
+}
+
+.docs-data > .input-group {
+  margin-bottom: 10px;
+}
+
+.docs-data > .input-group > label {
+  min-width: 80px;
+}
+
+.docs-data > .input-group > span {
+  min-width: 50px;
+}
+
+.docs-buttons > .btn,
+.docs-buttons > .btn-group,
+.docs-buttons > .form-control {
+  margin-right: 4px;
+  margin-bottom: 8px;
+}
+
+.docs-toggles > .btn,
+.docs-toggles > .btn-group,
+.docs-toggles > .dropdown {
+  margin-bottom: 10px;
+}
+
+.docs-tooltip {
+  display: block;
+  margin: -8px -12px;
+  padding: 8px 12px;
+}
+
+@media (max-width: 400px) {
+  .btn-group-crop {
+    margin-right: -16px!important;
+  }
+
+  .btn-group-crop > .btn {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+}
+
+.docs-aspect-ratios,
+.docs-view-modes {
+  width: 100%;
+}
+
+.docs-aspect-ratios > .btn {
+  width: 20%;
+}
+
+.docs-view-modes > .btn {
+  width: 25%;
+}
+
+.docs-options .dropdown-menu {
+  width: 100%;
+}
+
+.docs-options .dropdown-menu > li {
+  padding: 3px 20px;
+}
+
+.docs-options .dropdown-menu > li:hover {
+  background-color: #f7f7f7;
+}
+
+.docs-options .dropdown-menu > li > label {
+  display: block;
+  width: 105%;
+}
+
+.docs-cropped .modal-body {
+  text-align: center;
+}
+
+.docs-cropped .modal-body > img,
+.docs-cropped .modal-body > canvas {
+  max-width: 100%;
+}
 
 
 /* Footer */
@@ -112,19 +246,19 @@ body {
 
 .links {
   text-align: center;
-  margin-bottom: 30px;
+  margin-bottom: 32px;
 }
 
 .heart {
   position: relative;
   display: block;
   width: 100%;
-  height: 30px;
-  margin-top: 20px;
-  margin-bottom: 20px;
+  height: 32px;
+  margin-top: 16px;
+  margin-bottom: 16px;
   color: #ddd;
   font-size: 18px;
-  line-height: 30px;
+  line-height: 32px;
   text-align: center;
 }
 
@@ -156,7 +290,8 @@ body {
 /* Google Code Prettify */
 
 .prettyprint {
-  margin-bottom: 0;
-  padding: 15px !important;
-  border: 1px solid #ddd !important;
+  margin-top: 16px;
+  margin-bottom: 16px;
+  padding: 16px !important;
+  border: 1px solid #eee !important;
 }
